--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     </style>
 </head>
 <body>
+    <script src="Player.js"></script> 
+    <script src="MenuScene.js"></script> <script src="GameScene.js"></script> 
+    <script src="main.js"></script> 
 </body>
 </html>
