--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html>
 <head>
     <title>Survie - Organisation Modulaire</title>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-    <script src="Player.js"></script> 
-    <script src="GameScene.js"></script> 
-    <script src="main.js"></script> 
-    <style>
-        body { margin: 0; background-color: #333333; }
-    </style>
+    
+    <link rel="stylesheet" href="style.css"> 
+    
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script> 
 </head>
 <body>
     <script src="Player.js"></script> 
-    <script src="MenuScene.js"></script> <script src="GameScene.js"></script> 
-    <script src="main.js"></script> 
-</body>
+    <script src="MenuScene.js"></script> 
+    <script src="GameScene.js"></script> 
+    <script src="main.js"></script> </body>
 </html>
