gros test de carte

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <script src="Player.js"></script> 
+    <script src="World.js"></script> 
     <script src="MenuScene.js"></script> 
     <script src="GameScene.js"></script> 
-    <script src="main.js"></script> </body>
+    <script src="main.js"></script> 
+</body>
 </html>
