--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="fr">
 <head>
-    <title>Survie - Organisation Modulaire</title>
+    <meta charset="UTF-8" />
+    <title>Mon Jeu de Survie Phaser</title>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.80.1/dist/phaser.js"></script>
+    
     <link rel="stylesheet" href="style.css"> 
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script> 
-</head>
+    
+    </head>
 <body>
+    <script src="AnimatedTiles.js"></script> 
     <script src="Player.js"></script> 
     <script src="World.js"></script> 
     <script src="MenuScene.js"></script> 
+    <script src="OptionsScene.js"></script> 
     <script src="GameScene.js"></script> 
     <script src="main.js"></script> 
 </body>
